# aws-sdk-compile-checks

./: .gitignore  Cargo.toml  README.md
.github/workflows/: github-deploy.yml
aws-sdk-compile-checks-macro/: Cargo.toml  README.md
aws-sdk-compile-checks-macro/required_properties_info/: required_props_info.csv
aws-sdk-compile-checks-macro/src/: attributes.rs  findings.rs  lib.rs  required_properties.rs  visitor.rs
aws-sdk-compile-checks-usage/: Cargo.toml  README.md
aws-sdk-compile-checks-usage/src/: main.rs
aws-sdk-compile-checks-usage/tests/fails/: attributes_missing_equals_sign.rs  attributes_missing_equals_sign.stderr  attributes_missing_sdks.rs  attributes_missing_sdks.stderr  attributes_unknown_sdk.rs  attributes_unknown_sdk.stderr  attributes_wrong_attribute.rs  attributes_wrong_attribute.stderr  attributes_wrong_sdk_separators.rs  attributes_wrong_sdk_separators.stderr  missing_message_in_send_message.rs  missing_message_in_send_message.stderr  missing_queue_url_and_message_in_send_message.rs  missing_queue_url_and_message_in_send_message.stderr  missing_queue_url_in_send_and_receive_message.rs  missing_queue_url_in_send_and_receive_message.stderr  missing_queue_url_in_send_message.rs  missing_queue_url_in_send_message.stderr  multiple_clients_one_issue.rs  multiple_clients_one_issue.stderr  multiple_clients_with_issues.rs  multiple_clients_with_issues.stderr  multiple_clients_with_issues_same_method_name.rs  multiple_clients_with_issues_same_method_name.stderr  unsure_what_sdk_to_use.stderr  unsure_what_sdk_to_use_long_list.rs  unsure_what_sdk_to_use_long_list.stderr  unsure_what_sdk_to_use_short_list.rs  unsure_what_sdk_to_use_short_list.stderr
aws-sdk-retrieve-required/: Cargo.toml  README.md  build.sh
aws-sdk-retrieve-required/input/: names_of_sdk_crates
aws-sdk-retrieve-required/src/: main.rs
