[package]
name = "aws-sdk-compile-checks"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-sdk-compile-checks-macro = { path = "../aws-sdk-compile-checks-macro" }
aws-config = "1.1.8"
aws-sdk-sqs = "1.9.0"
aws-sdk-dynamodb = "1.28.0"

[dev-dependencies]
trybuild = "1.0.91"
aws-sdk-lambda = "1.20.0"
aws-sdk-amplify = "1.20.0"
