[package]
name = "aws-sdk-compile-checks"
version = "0.3.0"
edition = "2021"

[dependencies]
aws-sdk-compile-checks-macro = { path = "../aws-sdk-compile-checks-macro" }
aws-config = "1.5.17"
aws-sdk-sqs = "1.60.0"
aws-sdk-dynamodb = "1.66.0"
aws-sdk-rekognition = "1.63.0"
aws-sdk-iam = "1.63.0"
aws-sdk-evidently = "1.60.0"

[dev-dependencies]
trybuild = "1.0.91"
aws-sdk-lambda = "1.70.0"
aws-sdk-amplify = "1.66.0"
